# cv-utils

./: CMakeLists.txt  README.md
include/cv_utils/: common.h  convenience.h  cv_utils.h  file_io.h  gui.h  loops.h
test/: test_common.h  test_convenience.cpp  test_file_io.cpp  test_gui.cpp  test_loops.cpp
